# gnuais

./: .gitignore  CMakeLists.txt  config.h.in
src/: .gitignore  CMakeLists.txt  ais.c  audiounit.c  audiounit.h  audiounit.m  input.c  input.h
